force-app/main/default/objects/Contact_Action__c/Contact_Action__c.object-meta.xml
<CustomObject>
    <label>Contact Action</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Contact Action Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>