force-app/main/default/objects/Contact_Action__c/fields/TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TLO Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>Contact Actions</relationshipLabel>
    <relationshipName>Contact_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>